# LDPC_codes

./: CMakeLists.txt  README.md
cl/: KernelCheck_byindex.cl  KernelCheck_naive.cl  KernelHS_byindex.cl  KernelHS_naive.cl  KernelLLR.cl  KernelVS_byindex.cl  KernelVS_naive.cl
src/: Decoder.hpp  LDPC_bit_flipping.cpp  LDPC_min_sum.cpp  LDPC_min_sum_byindex.cpp  LDPC_min_sum_naive.cpp  Timer.h  a.out  matrix_generate.cpp  matrix_generate.h  test.cpp  workspace.code-workspace
